<resources>
    <string name="app_name">MediReminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="db_name">MedApp</string>
    <string name="home">Home</string>
    <string name="reminder">Reminder</string>
    <string name="suspend">Suspend</string>
    <string name="prescriptionRefill">Prescription Refill</string>
    <string name="howToUse">How To Use</string>
    <string name="addDose">add dose</string>
    <string name="login_with_google">Login with google</string>
    <string name="auth_title">You take your family\nWe take care of you</string>
    <string name="login_with_phone_number">Login with phone number</string>
    <string name="add_dependent">Add Dependent</string>
    <string name="manage_meds_for_your_family_members">Manage meds for your family members</string>
    <string name="first_name">first name</string>
    <string name="info">By clicking the Done button, you confirm that you received the consent of the dependent(when applicable)to the association of the dependent\'s personal information with their health information and confirm you have read and agreed to our Terms and Privacy Policy</string>
    <string name="done">Done</string>
    <string name="last_name">last name</string>
    <string name="addMedicine">Add Medicine</string>
    <string name="mg">mg</string>
    <string name="strength">Strength</string>
    <string name="refillReminder">Refill Reminder</string>
    <string name="medicineName">Medicine Name</string>
    <string name="yourName">your name</string>
    <string name="type">Type</string>
    <string name="startDate">Start Data</string>
    <string name="duration">Duration</string>
    <string name="amount">No.of Pills</string>
    <string name="frequence">Dosage (per day)</string>
    <string name="save">Save</string>
    <string name="timeToTake">Time to take a medicine</string>
    <string name="time">Time</string>
    <string name="num">0</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="phone_number">Phone number</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="i_accept_the_privacy_policy_and_the_terms_of_use">i accept the privacy policy and the terms of use</string>
    <string name="sign_up">SIGN UP</string>
    <string name="not_vaild_email">Not a valid email !</string>
    <string name="empty_email">"Email can\'t be empty"</string>
    <string name="empty_name">Name can not be empty !</string>
    <string name="empty_phone">Phone can not be empty !</string>
    <string name="empty_birthday">Birthday can not be empty !</string>
    <string name="empty_gender">Select gender !</string>
    <string name="add_health_tacker">Add Health Tacker</string>
    <string name="active_meds">Active meds</string>
    <string name="inactive_meds">Inactive meds</string>
    <string name="add_a_med">Add a med</string>
    <string name="mad_name">mad name</string>
    <string name="mad_strength">mad strength</string>
    <string name="mad_refill">mad refill</string>
    <string name="medsicon">medsIcon</string>
    <string name="med_title">Medications</string>
    <string name="meds_title">Medications</string>
    <string name="login_in">Login</string>
    <string name="taker_title">Add Health Taker</string>
    <string name="add_med_title">Add Medicine</string>
    <string name="reg_title">Register</string>
    <string name="send_invite">Send Invite</string>
    <string name="period">Period</string>
    <string name="more">More</string>
    <string name="MedScreen">Medications</string>
    <string name="numofstrength">numOfStrength</string>
    <string name="bottle">bottle</string>
    <string name="pill">pill</string>
    <string name="drop">drop</string>
    <string name="injection">injection</string>
    <string-array name="periodItems">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
        <item>Night</item>
    </string-array>
    <string-array name="durationMenu">
        <item>Once a week</item>
        <item>Every day</item>
        <item>Every 2 days</item>
        <item>Every 3 days</item>
        <item>2 days a week</item>
        <item>3 days a week</item>
        <item>Every 28 days</item>
        <item>5 days a week</item>
        <item>Only as needed</item>
        <item>Other</item>
    </string-array>
    <string-array name="instructionMenu">
        <item>Before eating</item>
        <item>While eating</item>
        <item>After eating</item>
        <item>Doesn’t matter</item>
        <item>Any other instructions</item>
    </string-array>
    <string-array name="strengthMenu">
        <item>  g  </item>
        <item>  mg  </item>
        <item>  IU  </item>
        <item>  mcg  </item>
        <item>  mcg/ml  </item>
        <item>  mEq  </item>
        <item>  mL  </item>
        <item>  mg/g  </item>
        <item>  mg/cm2  </item>
        <item>  %  </item>
        <item>  mg/ml  </item>
        <item>  mcg/hr  </item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msgTacker">Wants to add you as health tacker</string>
    <string name="emailHint">mennaElsayed@gmail.com</string>
    <string name="accept">Accept</string>
    <string name="ignore">Ignore</string>
    <string name="requests">Requests</string>
    <string name="endDate">End Date</string>
    <string name="instruction">Instruction</string>
    <string name="requsets">requsets</string>
    <string name="sign_in">Sign-in</string>
    <string name="take">Take</string>
    <string name="snooze">Snooze</string>
    <string name="left">left</string>
    <string name="refill_your_prescription">Refill your prescription</string>
    <string name="add">Add</string>
    <string name="add_number_of_pills">add number of pills</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="meds_remaining">meds remaining</string>
    <string name="profiles">Profiles</string>
    <string name="account_name">account name</string>
    <string name="skip">Skip</string>
    <string name="user">User</string>
    <string name="refill">Refill</string>
    <string name="your_profile">your profile</string>
    <string name="your_tackers">your tackers</string>
    <string name="tackermail">TackerMail</string>
    <string name="tackername">tackerName</string>
</resources>