<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/medicationsFragment"
        android:enabled="true"
        android:icon="@drawable/outline_vaccines_20"
        android:title="@string/med_title" />

    <item
        android:id="@+id/requestFragment"
        android:enabled="true"
        android:icon="@drawable/ic_notifications"
        android:title="@string/requests" />

    <item
        android:id="@+id/userFragment"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/user" />


</menu>