<?xml version="1.0" encoding="utf-8"?>


<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ActiveconstLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtMedName"
            android:layout_width="93dp"
            android:layout_height="28dp"
            android:layout_marginStart="12dp"
            android:hint="@string/mad_name"
            app:layout_constraintBottom_toBottomOf="@+id/imgIcon"
            app:layout_constraintStart_toEndOf="@+id/imgIcon"
            app:layout_constraintTop_toTopOf="@+id/imgIcon"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtMedStrength"
            android:layout_width="80dp"
            android:layout_height="28dp"
            android:layout_marginStart="4dp"
            android:hint="@string/mad_strength"
            app:layout_constraintBottom_toBottomOf="@+id/txtNumStrength"
            app:layout_constraintStart_toEndOf="@+id/txtNumStrength"
            app:layout_constraintTop_toTopOf="@+id/txtNumStrength"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtMedRefill"
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:hint="@string/mad_refill"
            app:layout_constraintEnd_toEndOf="@+id/txtMedStrength"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtMedName"
            app:layout_constraintTop_toBottomOf="@+id/txtMedStrength" />

        <TextView
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:text="@string/left"
            app:layout_constraintBottom_toBottomOf="@+id/txtMedRefill"
            app:layout_constraintStart_toEndOf="@+id/txtMedRefill"
            app:layout_constraintTop_toBottomOf="@+id/txtMedName" />

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="64dp"
            android:layout_height="46dp"
            android:contentDescription="@string/medsicon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNumStrength"
            android:layout_width="30dp"
            android:layout_height="28dp"
            android:hint="@string/numofstrength"
            app:layout_constraintBottom_toBottomOf="@+id/txtMedName"
            app:layout_constraintStart_toEndOf="@+id/txtMedName"
            app:layout_constraintTop_toTopOf="@+id/txtMedName"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
