<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.itijavaproject.ui.homescreen.view.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_medicationsFragment"
            app:destination="@id/medicationsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_addMedicineFragment"
            app:destination="@id/addMedicineFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_homeFragment_to_addHealthTakerFragment"
            app:destination="@id/addHealthTakerFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/medicationsFragment"
        android:name="com.example.itijavaproject.ui.medicationsscreen.view.MedicationsFragment"
        android:label="@string/med_title"
        tools:layout="@layout/fragment_medications">
        <action
            android:id="@+id/action_medicationsFragment_to_addMedicineFragment"
            app:destination="@id/addMedicineFragment" />
        <action
            android:id="@+id/action_medicationsFragment_to_medicationDisplayFragment"
            app:destination="@id/medicationDisplayFragment" />
    </fragment>

    <fragment
        android:id="@+id/medicationDisplayFragment"
        android:name="com.example.itijavaproject.ui.medicationDisplay.view.MedicationDisplayFragment"
        android:label="@string/meds_title"
        tools:layout="@layout/fragment_medication_display" >
        <argument
            android:name="ObjOfMeds"
            app:argType="com.example.itijavaproject.pojo.model.Medicine" />
        <action
            android:id="@+id/action_medicationDisplayFragment_to_medicationsFragment3"
            app:destination="@id/medicationsFragment" />
    </fragment>

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.itijavaproject.ui.splashscreen.view.SplashFragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_authFragment"
            app:destination="@id/authFragment" />
    </fragment>

    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.itijavaproject.ui.authscreen.view.AuthFragment"
        android:label="@string/login_in"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_authFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_authFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/addHealthTakerFragment"
        android:name="com.example.itijavaproject.ui.healthTakerScreen.view.AddHealthTakerFragment"
        android:label="@string/taker_title"
        tools:layout="@layout/fragment_add_health_taker" />

    <fragment
        android:id="@+id/addMedicineFragment"
        android:name="com.example.itijavaproject.ui.addMedicine.view.AddMedicineFragment"
        android:label="@string/add_med_title"
        tools:layout="@layout/fragment_add_medicine" >
        <action
            android:id="@+id/action_addMedicineFragment_to_medicationsFragment2"
            app:destination="@id/medicationsFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.itijavaproject.ui.registrationscreen.RegisterFragment"
        android:label="@string/reg_title"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/moreFragment"
        android:name="com.example.itijavaproject.ui.morescreen.MoreFragment"
        android:label="fragment_more"
        tools:layout="@layout/fragment_more" />
</navigation>