<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:cardCornerRadius="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtadd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textSize="15dp"
                    app:layout_constraintEnd_toEndOf="@+id/txtmsgRefill"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/txtmsgRefill"
                    app:layout_constraintTop_toBottomOf="@+id/txtmsg" />

                <TextView
                    android:id="@+id/txtmsgRefill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/refill_your_prescription"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.105"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.079" />

                <EditText
                    android:id="@+id/editRefill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_number_of_pills"
                    android:inputType="phone"
                    app:layout_constraintEnd_toEndOf="@+id/txtadd"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/txtadd"
                    app:layout_constraintTop_toBottomOf="@+id/txtadd" />

                <TextView
                    android:id="@+id/numPills"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/num"
                    app:layout_constraintEnd_toEndOf="@+id/txtmsgRefill"
                    app:layout_constraintHorizontal_bias="0.077"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtmsgRefill" />

                <TextView
                    android:id="@+id/txtmsg"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/meds_remaining"
                    app:layout_constraintBottom_toBottomOf="@+id/numPills"
                    app:layout_constraintStart_toEndOf="@+id/numPills"
                    app:layout_constraintTop_toTopOf="@+id/numPills"
                    app:layout_constraintVertical_bias="0.166" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
