<?xml version="1.0" encoding="utf-8"?>


<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ActiveconstLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtMedName"
            android:layout_width="93dp"
            android:layout_height="28dp"
            android:layout_marginStart="24dp"
            android:hint="@string/mad_name"
            app:layout_constraintBottom_toBottomOf="@+id/imgIcon"
            app:layout_constraintStart_toEndOf="@+id/imgIcon"
            app:layout_constraintTop_toTopOf="@+id/imgIcon"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtMedStrength"
            android:layout_width="80dp"
            android:layout_height="28dp"
            android:hint="@string/mad_strength"
            app:layout_constraintBottom_toBottomOf="@+id/txtMedName"
            app:layout_constraintStart_toEndOf="@+id/txtMedName"
            app:layout_constraintTop_toTopOf="@+id/txtMedName"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtMedRefill"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:hint="@string/mad_refill"
            app:layout_constraintEnd_toEndOf="@+id/txtMedStrength"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtMedName"
            app:layout_constraintTop_toBottomOf="@+id/txtMedStrength" />

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="64dp"
            android:layout_height="46dp"
            android:contentDescription="@string/medsicon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view4"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/imgIcon"
            app:layout_constraintStart_toEndOf="@+id/imgIcon"
            app:layout_constraintTop_toTopOf="@+id/imgIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
